Bug Fix: (Safari) Realtime Preview of Tailsweep being clipped, make text preview higher

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -3994,7 +3994,7 @@ div.header-container.main {
                             font-size: 2.7em;
                             text-align: center;
                             width: 100%;
-                            height: 50px;  
+                            height: 70px;  
                             margin-top: 50px;
                             position: absolute;
                             
